<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/prepoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_poll_activities"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="107dp" />

    <Button
        android:id="@+id/poll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poll_day_activities"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="211dp" />

    <Button
        android:id="@+id/turnout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poll_day_turnout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="319dp" />
</android.support.constraint.ConstraintLayout>